Default device is now the console logger.

--- a/config/boblight.conf
+++ b/config/boblight.conf
@@ -5,7 +5,8 @@ interface       127.0.0.1
 
 [device]
 #output          /dev/ttyACM0
-type            serial
+#type            serial
+type            console
 #type            i2c
 output          COM3
 rate            115200
