--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'BoblightServer'
+    baseName = 'BoblightPi'
     version =  '1.0'
 }
 
