--- a/config/boblight.conf
+++ b/config/boblight.conf
@@ -1,17 +1,21 @@
 #two lights on a 12 channel momo device
 
 [global]
-interface       127.0.0.1
+interface         127.0.0.1
+protocolVersion   5
+port              19333
+lightOffset       -1
+maxBlocks         80
 
 [device]
-#output          /dev/ttyACM0
-type            serial
-#type            console
-#type            i2c
-output          COM3
-rate            115200
-i2cBus          1
-i2cDevice       41
+#output           /dev/ttyACM0
+#type              serial
+type             console
+#type             i2c
+output            COM3
+rate              115200
+i2cBus            1
+i2cDevice         41
 
 [light]
 name		001
