New WS2812b via serial connected for testing, LedBuffer implemented

--- a/config/boblight.conf
+++ b/config/boblight.conf
@@ -5,14 +5,14 @@ interface         127.0.0.1
 protocolVersion   5
 port              19333
 lightOffset       -1
-maxBlocks         80
+maxBlocks         40
 
 [device]
 #output           /dev/ttyACM0
-#type              serial
-type             console
+type              serial
+#type             console
 #type             i2c
-output            COM3
+output            COM4
 rate              115200
 i2cDevice         41
 
