Performance tuning of the I2C Device. With a I2C speed of 1200 kHz it's running well

--- a/config/boblight.conf
+++ b/config/boblight.conf
@@ -6,6 +6,7 @@ protocolVersion   5
 port              19333
 lightOffset       -1
 maxBlocks         40
+colorTolerance    10
 
 [device]
 #output           /dev/ttyACM0
