--- a/config/boblight.conf
+++ b/config/boblight.conf
@@ -7,6 +7,7 @@ port              19333
 lightOffset       -1
 maxBlocks         40
 colorTolerance    10
+fps               20
 
 [device]
 #output           /dev/ttyACM0
