--- a/config/boblight.conf
+++ b/config/boblight.conf
@@ -18,6 +18,33 @@ output            COM4
 rate              115200
 i2cDevice         41
 
+[hue]
+url               http://192.168.100.55/api/newdeveloper
+
+[light]
+name		HUE01
+color		red 	hue 1
+color		green 	hue 2
+color		blue 	hue 3
+hscan		0 30
+vscan		0 50
+
+[light]
+name		HUE02
+color		red 	hue 1
+color		green 	hue 2
+color		blue 	hue 3
+hscan		0 30
+vscan		50 100
+
+[light]
+name		HUE03
+color		red 	hue 1
+color		green 	hue 2
+color		blue 	hue 3
+hscan		70 100
+vscan		20 80
+
 [light]
 name		001
 color		red 	ambilight 1
